--- a/css/styles.css
+++ b/css/styles.css
@@ -43,11 +43,16 @@ body {
     z-index: 1000;
 }
 
+#navbar.navbar-scroll {
+    margin-top: -0.1rem !important;
+    background: #191919;
+    padding: 1rem 0.1rem !important;
+    box-shadow: 0px 8px 16px 0px rgba(225, 225, 223, 0.5) !important;
+}
+
 .navbar .navbar-brand img {
     width: 298px;
     height: 41.31px;
-    left: 120px;
-    top: 39px;
 }
 
 .navbar .bg-danger {
@@ -61,11 +66,103 @@ body {
     border: 1px solid #fff !important;
     border-radius: 24px !important;
     color: #fff !important;
-    padding: 8px 22px !important;
+    padding: 0 30px !important;
+    display: flex;
+    text-align: center;
+    align-items: center;
+    justify-content: center;
+    outline: none;
+}
+
+.dropdown-button .dropbtn {
+    font-size: 16px;
+    border: none;
+    outline: none;
+    color: white;
+    padding: 14px 16px;
+    background-color: inherit;
+    font-family: inherit;
+    margin: 0;
+}
+
+.dropdown-content {
+    display: none;
+    position: relative;
+    background-color: #f9f9f9;
+    min-width: 8rem;
+    border-radius: 10px;
+    box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+    z-index: 999;
+}
+
+.dropdown-content a {
+    float: none;
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+    text-align: left;
+}
+
+.dropdown-content a:hover {
+    background-color: #ddd;
+}
+
+.dropdown-button:hover .dropdown-content {
+    display: block;
 }
 
 
 /* hero */
+
+.dropdown-carousel-button {
+    background-color: #f21426;
+    border-radius: 50px !important;
+}
+
+
+/* .dropbtn-radius {
+    border-radius: 100px !important;
+} */
+
+.dropdown-carousel-button .dropbtn-radius {
+    font-size: 16px;
+    border: none;
+    outline: none;
+    color: white;
+    padding: 10px 16px;
+    background-color: inherit;
+    font-family: inherit;
+    margin: 0;
+    border-radius: 50% !important;
+}
+
+.dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: #f9f9f9;
+    min-width: 8rem;
+    border-radius: 5px;
+    box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+    z-index: 999;
+}
+
+.dropdown-content a {
+    float: none;
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+    text-align: left;
+}
+
+.dropdown-content a:hover {
+    background-color: #ddd;
+}
+
+.dropdown-carousel-button:hover .dropdown-content {
+    display: block;
+}
 
 .carousel-margin-top {
     margin-top: 0 !important;
@@ -92,14 +189,9 @@ body {
     background-repeat: no-repeat;
 }
 
-
-/* .carousel {
-    height: 100vh;
-} */
-
 .carousel-item img {
-    width: 554px !important;
-    height: 554px;
+    width: 35.6rem !important;
+    height: 34.6rem;
 }
 
 .carousel-content {
@@ -117,17 +209,18 @@ body {
 .btn-custom-property {
     padding: 10px 40px;
     gap: 10px;
-    width: 165px;
-    height: 52px;
-    left: 120px;
-    top: 438px;
+    width: 10.3rem;
+    height: 40px;
+    line-height: 30px;
     background: #f21426;
     border-radius: 24px;
+    text-align: center;
 }
 
 .btn-play {
     border-radius: 24px;
     padding: 7px 18px;
+    border: 1px solid var(--color-text);
 }
 
 
@@ -198,10 +291,18 @@ body {
     text-transform: capitalize;
 }
 
+@media (max-width: 1024px) {
+    .features .card-body p {
+        font-size: 16px !important;
+    }
+}
+
 
 /* Category */
 
-.category-property {
+.category-section .category-property-heading {
+    text-align: center;
+    margin: 5rem 0 !important;
     font-family: var(--font-family-2);
 }
 
@@ -212,12 +313,74 @@ body {
     background-repeat: no-repeat;
 }
 
+.section-1-content .section-1-content-inner {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-gap: 7rem;
+    align-items: center;
+    justify-content: center;
+    margin: 2rem auto;
+}
+
+@media (max-width: 56.25em) {
+    .section-1-content .section-1-content-inner {
+        grid-template-columns: 100%;
+    }
+    .section-1-content .section-1-content-inner {
+        grid-gap: 1rem;
+        margin: 1rem auto;
+    }
+    .image-1 {
+        grid-row: 2/3;
+    }
+    .text {
+        grid-row: 1/2;
+    }
+    .category-section .category img {
+        margin-bottom: -3rem !important;
+    }
+    .img-tag {
+        margin-top: 0rem !important;
+    }
+    .participate h2 {
+        font-size: 20px;
+    }
+    .participate h3 {
+        font-size: 18px;
+    }
+    .u-features-property,
+    .partners h3 {
+        font-size: 20px !important;
+    }
+    .u-features .card-body h5 {
+        font-size: 1rem !important;
+    }
+    .u-features .card img {
+        width: 8rem !important;
+        padding: 0 1rem;
+    }
+    .image-strock {
+        width: 1rem !important;
+        height: 4rem !important;
+    }
+    .partners .partners-title {
+        font-size: 20px !important;
+        margin-bottom: 2rem !important;
+    }
+    .partners .container .row-1 .col a .partner-logo {
+        width: 8rem !important;
+    }
+    .connect-info-bg h3 {
+        padding: 2rem 0 1rem 0 !important;
+    }
+}
+
 .img-tag {
     height: 27.9375rem;
     margin-top: 7rem;
 }
 
-.category .col-md-6 .btn {
+.category.btn {
     padding: 10px 40px;
     gap: 10px;
     width: 165px;
@@ -229,7 +392,6 @@ body {
 }
 
 .category-2 {
-    /* height: 5rem; */
     background-color: #000000 !important;
     position: relative;
     margin-top: 3rem !important;
@@ -243,6 +405,7 @@ body {
     top: -10px;
     background: #5f3e85;
     filter: blur(150px);
+    z-index: -1;
 }
 
 .category-2-middle {
@@ -254,6 +417,7 @@ body {
     height: 250px;
     background: #5932d0;
     filter: blur(150px);
+    z-index: -1;
 }
 
 .category-2-right {
@@ -264,6 +428,7 @@ body {
     top: 0;
     background: #5f3e85;
     filter: blur(150px);
+    z-index: -1;
 }
 
 .category-2 .col-md-6 {
@@ -276,27 +441,46 @@ body {
     height: 88.92px;
 }
 
-.category-2 .col-md-6 .img-coin-left-t {
+#category-2 .img-coin-left-t {
     left: 0.2rem;
     top: -2.5rem;
 }
 
-.category-2 .col-md-6 .img-coin-left-b {
+#category-2 .img-coin-left-b {
     left: 8rem;
     bottom: 0.5rem;
 }
 
-.category-2 .col-md-6 .img-coin-right-t {
+#category-2 .img-coin-right-t {
     right: 5rem;
-    top: -9rem;
+    top: -3rem;
 }
 
-.category-2 .col-md-6 .img-coin-right-b {
+#category-2 .img-coin-right-b {
     right: 12rem;
     bottom: -3rem;
 }
 
-.category-2 .col-md-6 .btn {
+@media (max-width: 780px) {
+    #category-2 .img-coin-left-t {
+        left: 0.2rem;
+        top: 10rem;
+    }
+    #category-2 .img-coin-left-b {
+        left: 10rem;
+        bottom: 0.5rem;
+    }
+    #category-2 .img-coin-right-t {
+        right: 3rem;
+        top: -3rem;
+    }
+    #category-2 .img-coin-right-b {
+        right: 4rem;
+        bottom: -3rem;
+    }
+}
+
+.category-2 .btn {
     padding: 10px 40px;
     gap: 10px;
     width: 165px;
@@ -319,7 +503,6 @@ body {
 }
 
 .category-4 {
-    /* height: 5rem; */
     background-color: #000000 !important;
     position: relative;
     margin-top: 3rem !important;
@@ -333,6 +516,7 @@ body {
     top: -10px;
     background: #5932d0;
     filter: blur(150px);
+    z-index: -1;
 }
 
 .category-4-middle {
@@ -344,6 +528,7 @@ body {
     height: 250px;
     background: #5932d0;
     filter: blur(150px);
+    z-index: -1;
 }
 
 .category-4-right {
@@ -354,6 +539,7 @@ body {
     top: 0;
     background: #5932d0;
     filter: blur(150px);
+    z-index: -1;
 }
 
 
@@ -379,11 +565,6 @@ body {
 
 
 /* Section Up-Coming Features */
-
-.u-features {
-    margin-top: 7rem !important;
-    margin-bottom: 7rem !important;
-}
 
 .u-features .card-body h5 {
     font-family: var(--font-family-2);
@@ -418,8 +599,7 @@ body {
 
 .u-features-property {
     font-family: var(--font-family-2);
-    font-size: 2.3rem;
-    margin-bottom: 8rem;
+    margin: 4rem 0 !important;
 }
 
 
@@ -440,6 +620,7 @@ body {
     height: auto;
     padding: 0;
     margin: 0;
+    transition: all 0.3s ease-out;
 }
 
 .partners .container .row-1 .col a .logo-1 {
@@ -508,6 +689,7 @@ body {
     transition: all 0.3s ease-out;
 }
 
+.partners .container .row .col img:hover,
 .footer .footer-link-wrapper i:hover {
     color: #f21426;
     transform: translateY(-5px);
@@ -528,17 +710,45 @@ body {
         width: 150px !important;
         height: 150px !important;
     }
-    .category-img {
+    .category-img,
+    .category-img-3 {
         background-image: none;
     }
     .img-tag {
-        /* width: 549.97px;
-        height: 447px;
-        margin-top: 7rem; */
         height: 25.5rem;
     }
     .img-tag-2 {
         height: 25.5rem;
     }
-    .carousel-content;
+    .navbar .navbar-brand img {
+        width: 170px;
+        height: 28.31px;
+    }
+    .navbar-nav .nav-item .bg-danger {
+        font-size: 16px;
+        padding: 6px 16px !important;
+    }
+    .carousel-item img {
+        width: 20.6rem !important;
+        height: 20.6rem;
+        margin-top: 5rem;
+    }
+    .btn-custom-property {
+        padding: 5px 30px;
+    }
+    .carousel-content {
+        margin-top: 10rem !important;
+        padding: 0 2rem;
+    }
+    .category-section .category-property {
+        font-size: 24px;
+    }
+    .category-2-right,
+    .category-2-left,
+    .category-2-middle,
+    .category-4-left,
+    .category-4-medium,
+    .category-4-right {
+        filter: blur(300px);
+    }
 }
