--- a/css/styles.css
+++ b/css/styles.css
@@ -209,9 +209,17 @@ body {
     position: relative;
 }
 
+
+/* .carousel-inner> :nth-child(1) img,
+.carousel-inner> :nth-child(2) img,
+.carousel-inner> :nth-child(3) img {
+    width: 70rem !important;
+    height: 40rem;
+} */
+
 .carousel-item img {
-    width: 35.6rem !important;
-    height: 34.6rem;
+    width: 45.6rem !important;
+    height: 44.6rem;
 }
 
 .carousel-inner h1 {
@@ -358,6 +366,12 @@ body {
 .category .section-1-content-inner .hidden {
     width: 100% !important;
     height: 100% !important;
+}
+
+.section-1-content .section-1-content-inner {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
 }
 
 
@@ -756,7 +770,7 @@ body {
     width: 491px;
     height: 480.77px;
     overflow: hidden;
-    bottom: 0;
+    top: 5rem !important;
 }
 
 .connect-info .col-md-6 h3 {
@@ -856,6 +870,33 @@ body {
         width: 100% !important;
         height: auto;
         text-align: center;
+    }
+}
+
+@media (max-width: 500px) {
+    #features .container .card .card-body p {
+        line-height: 20px;
+    }
+    #features .container .card .card-body .btn-danger {
+        margin-bottom: 0.7rem;
+    }
+    #features .container .card .card-body {
+        left: 0;
+    }
+    .features .card-col-3-content .card-body p {
+        font-size: 16px !important;
+    }
+    .category .section-1-content-inner .img-tag,
+    .category .section-1-content-inner .img-tag-2 {
+        height: 12rem !important;
+        width: 12rem !important;
+        margin-bottom: 2rem !important;
+    }
+    #category-2 .img-coin-left-b {
+        bottom: -40rem !important;
+    }
+    #category-2 .img-coin-right-b {
+        bottom: -20rem;
     }
 }
 
